apps/ai/perplexica/perplexica-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perplexica-frontend-deployment
  namespace: perplexica
spec:
  replicas: 1
  selector:
    matchLabels:
      app: perplexica-frontend
  template:
    metadata:
      labels:
        app: perplexica-frontend
    spec:
      containers:
      - name: frontend-container
        image: itzcrazykns1337/perplexica-frontend:main
        ports:
          - containerPort: 3000
