apps/ai/perplexica/perplexica-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perplexica-frontend-service
  namespace: perplexica
spec:
  selector:
    app: perplexica-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
