apps/ai/perplexica/perplexica-frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: perplexica-frontend
  namespace: perplexica
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "perplexica.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: perplexica-frontend-service
          port: 3000
